# etf-dashboard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  docker-compose.yml  manage_app.py  pyproject.toml  requirements.txt  setup.py  start_app.py  stop_app.py
.github/workflows/: ci.yml
config/: settings.json
etf_dashboard/: __init__.py  config.py  main.py  models.py
etf_dashboard/app/: __init__.py  dashboard.py  styles.py
etf_dashboard/core/: __init__.py  data_flow.py  error_handler.py  integration.py  performance_monitor.py  ui_error_handler.py
etf_dashboard/data/: __init__.py  cache.py  loader.py  multi_source_loader.py  validator.py
etf_dashboard/indicators/: __init__.py  calculator.py
etf_dashboard/portfolio/: __init__.py  manager.py
etf_dashboard/signals/: __init__.py  manager.py
tests/: __init__.py
